# agv_ops_agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  home.ipynb  pyproject.toml  questions.md
alembic/: env.py
alembic/versions/: 20260416_083845_fc70045eac6e_create_users_table.py  20260417_102431_99f30218d7ef_add_user_role_field.py  20260417_102904_d767cfebee4b_add_files_table.py  20260417_110024_d56443be650d_add_file_hash_to_files_table.py
docs/: alembic_guide.md  structured_output_guide.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: agent.ts  auth.ts  axios.ts  file.ts  user.ts
frontend/src/components/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/pages/: ChangePasswordPage.tsx  HomePage.tsx  (+2 more)
scripts/: clean_db.py  init_admin.py  load_test.py
src/: __init__.py  config.py  database.py  main.py
src/agents/: __init__.py  checkpointer.py  context.py  langfuse_callback.py  llm_factory.py  middleware.py  prompts.py  rag_agent.py  state.py  store.py  tools.py
src/api/: __init__.py  router.py
src/models/: __init__.py  file.py  user.py
src/security/: __init__.py  jwt.py  password.py
src/services/: __init__.py  document_processor.py  embedding.py  vectorstore.py
src/tasks/: __init__.py  file_tasks.py  submitter.py
src/utils/: logger.py
tests/: conftest.py  test_agent_api.py  test_auth.py  test_config.py  test_document_processor.py  test_embedding.py  test_file.py  test_health.py  test_rag_agent.py  test_retrieval_chain.py  test_security.py  test_user.py  test_vectorstore.py
(+21 files in other folders)
